--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,4 +17,5 @@ monitor = { group = "androidx.test", name = "monitor", version.ref = "monitor" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+android-library = { id = "com.android.library", version.ref = "agp" }
 
